--- a/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
+++ b/product/移动与通信/邮件推送/常见问题/身份验证和配置相关问题.md
@@ -14,9 +14,7 @@
 
 <dx-alert infotype="explain" title="">
 - sampledomain.com 为示例，此处应替换为您的发信地址。
-- 如果您填入的域名是 sampledomain.com 形式，这属于主域名。
-- 如果您填入的域名是 abc.sampledomail.com 形式，这属于非主域名。
-- 是否使用主域名发信，在下面的配置中有存在差异，详见对应的说明。
+- 如果您填入的域名是 sampledomain.com 形式，这属于主域名；如果您填入的域名是 abc.sampledomail.com 形式，这属于非主域名，是否使用主域名发信，在下面的配置中有存在差异，详见对应的说明。
 </dx-alert>
 3. 返回至 [发信域名](https://console.cloud.tencent.com/ses/domain) 设置页面，单击**验证**。
 ![](https://qcloudimg.tencent-cloud.cn/raw/55afb951be6f94d7573a7f128811a5bd.png)
@@ -24,9 +22,6 @@
 >?下图为示例，请以您界面中看到的内容为准。
 
 ![](https://qcloudimg.tencent-cloud.cn/raw/a6d2143e067f2ce51e9897eb8382214c.png)
-<dx-alert infotype="explain" title="">
-每个账号的记录值都不同，请以您界面中看到的内容为准。
-</dx-alert>
 5. 如果您的域名托管在腾讯云，请进入  [DNS 解析 DNSPod 控制台](https://console.cloud.tencent.com/cns) 配置验证信息，单击对应的发信域名地址，可进入配置详情页。
 ![](https://qcloudimg.tencent-cloud.cn/raw/6f0f1b7d192a39d549081ebd6d1f3c6e.png)
 <dx-alert infotype="explain" title="">
@@ -39,7 +34,7 @@
   记录值中填入：`mxbiz1.qq.com`
 ![](https://qcloudimg.tencent-cloud.cn/raw/250a72988dfdcfb70f590161a767d10f.png)
 <dx-alert infotype="explain" title="">
-如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
+如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：abc。
 </dx-alert>
   - SPF 验证：
   主机记录中填入：`@`
@@ -47,7 +42,9 @@
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f5a86eb5666a4359dc792e85e6cd3297.png)
 <dx-alert infotype="explain" title="">
-如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：abc。
+- 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：abc
+- 如果您同时使用多个邮件推送服务商，记录值中需要保留多个服务商的域名，例如： include:qcloudmail.com include:domain1.com，其中 domain1.com 是其他邮件推送服务商的域名。
+
 </dx-alert>
   - DKIM 验证，填入2条记录：
   主机记录填入：`mail._domainkey`
@@ -55,21 +52,14 @@
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/62d7c629ad48caef5716da173a6842a8.png)
 <dx-alert infotype="explain" title="">
-如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
-</dx-alert>
-  主机记录填入：`mail._domainkey`
-  记录类型选择：TXT
-  记录值中填入您的“记录值”。
-![](https://qcloudimg.tencent-cloud.cn/raw/bb5349667453cf0cff7de92ba2b6dc94.png)
-<dx-alert infotype="explain" title="">
-如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
+如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：mail._domainkey.abc。
 </dx-alert>
   - 主机记录填入：`qcloud._domainkey`
   记录类型选择：TXT
   记录值中填入您的“记录值”。
 ![](https://qcloudimg.tencent-cloud.cn/raw/3571c6795ad5a5ffff44659f1cf2fca8.png)
 <dx-alert infotype="explain" title="">
-如果发信域名非主域名，比如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
+如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：qcloud._domainkey.abc。
 </dx-alert>
   - DMARC 验证：
   主机记录中填入：`_dmarc`
@@ -77,8 +67,9 @@
   记录值中填入：`v=DMARC1; p=none; rua=mailto:mail@sampledomain.com; ruf=mailto:mail@sampledomain.com; adkim=r; aspf=r`
 ![](https://qcloudimg.tencent-cloud.cn/raw/7c6adcfbdf981dd748fe87313cfaea2b.png)
 <dx-alert infotype="explain" title="">
-- mail@sampledomain.com 为示例，此处应替换为您的发信地址。
-- 如果您的发信域名是 abc.sampledomain.com，示例中的发信地址为 mail@abc.sampledomain.com。
+- 记录值中的mail@sampledomain.com为示例，应替换为您的发信地址。
+- 如果发信域名非主域名，例如：abc.sampledomain.com，主机记录中填入：_dmarc.abc，示例发信地址为：mail@abc.sampledomain.com
+
 </dx-alert>
 
 7. 再次回到 [发信域名](https://console.cloud.tencent.com/ses/domain) 配置详情页，单击**验证**进行验证。“当前值”显示的是您在上述配置域名验证信息中配置的内容，当“记录值”与“当前值”完全一致，验证状态为“已验证”，配置完成。
