--- a/product/安全服务/云访问安全代理/产品简介/应用场景.md
+++ b/product/安全服务/云访问安全代理/产品简介/应用场景.md
@@ -1,7 +1,6 @@
-云访问安全代理可适用于腾讯云内注册了账号，并购买了 CASB 服务的用户，是一款面向应用的防护服务，该服务用免开发改造的配置方式，快速解决用户加密需求，同时满足合规要求以及相关政策要求，帮助不同行业解决加密痛点问题。
+云访问安全代理是一款面向应用的防护服务，该服务用少开发改造的配置方式，快速解决用户加密需求，帮助不同行业解决加密痛点问题。
 
 ### 加密细控
-
 - **痛点**：传统数据安全以基础设施为主，例如数据库加密 TDE、全磁盘加密等，防护粒度粗。 企业内部 IT 人员和外部黑客从服务侧窃取数据，访问敏感数据。
 - **方案**：用户管理员可通过界面设置加解密策略，控制颗粒度可达到数据库的字段级（如敏感字段、手机号等）。使用云访问安全代理服务，实现从应用到数据库的控制范畴内，关键信息都是密文，密钥管理与密文数据分离，防护内外部威胁。
 ![](https://main.qcloudimg.com/raw/77a3ae3892d6715bc0df3292b3423ec2.png)
