--- a/product/存储与CDN/对象存储 4.0/控制台指南/内容审核/存量审核/设置历史数据审核任务.md
+++ b/product/存储与CDN/对象存储 4.0/控制台指南/内容审核/存量审核/设置历史数据审核任务.md
@@ -30,7 +30,7 @@
     - **每日审核上限**：可设置每日最多可审核的图片数量，默认无上限。
     - **审核场景**：审核场景展示的是默认场景或者您在审核策略中配置的场景，您可以勾选希望审核的场景分类。
  - **审核视频：**
-    - **审核后缀**：支持审核 mp4、avi、mkv、wmv、rmvb、flv、m3u8 后缀的视频。
+    - **审核后缀**：支持审核 mp4、avi、mkv、wmv、rmvb、flv、m3u8 等后缀的视频。
     - **选择审核策略**：请选择您配置的审核策略，不同审核策略对应不同的策略分类，您可以通过自定义策略定制个性化场景审核。支持审核涉黄、违法违规、广告审核场景，可勾选一种或多种检测场景。您可以前往 [设置审核策略](https://cloud.tencent.com/document/product/436/55206) 查看如何配置审核策略。
     - **每日审核上限**：可设置每日最多可审核的视频文件数量，默认无上限。
     - **审核内容**：支持审核视频画面和视频声音。
