--- a/product/监控与管理/云监控/使用指南/Dashboard2.0/创建告警数据源.md
+++ b/product/监控与管理/云监控/使用指南/Dashboard2.0/创建告警数据源.md
@@ -9,11 +9,10 @@
      - 云产品监控：选择“云产品监控”类型后，需选择对应的云产品，系统将会按云产品维度统计告警数量。
      - Prometheus 服务：选择“ Prometheus 服务”类型后，图表将展示所有实例告警数量，暂不支持实例筛选。
  - **group by**：类似 SQL 的 Group by 功能，默认关闭该功能，group by 目前仅支持云产品监控。关闭 group by ，图表仅展示所有云产品的告警数量总和；开启 group by 功能后，将会按照云产品分类告警数量。
- 关闭 group by ：如下图，仅展示一条曲线，该曲线表示所有云产品告警数量总和。
+	 - 关闭 group by ：如下图，仅展示一条曲线，该曲线表示所有云产品告警数量总和。
 ![](https://qcloudimg.tencent-cloud.cn/raw/15ba6254c8388c1ba9adf5944237ed12.png)
- 开启 group by ：以下图为例，该筛选时间段一共有5个云产品产生了告警，所以下图分类展示了5个云产品的告警数量变化趋势。
+	 - 开启 group by ：以下图为例，该筛选时间段一共有5个云产品产生了告警，所以下图分类展示了5个云产品的告警数量变化趋势。
 ![](https://qcloudimg.tencent-cloud.cn/raw/f554fb5005cd55dc9a488da863df5488.png)
- <br/><br/>
  - **聚合方式**：指多条曲线聚合成单条曲线的方式。若 GroupBy 不为空，则被分到同一分组内的曲线聚合成单条曲线。
  - **对比：**支持环比（昨天同时段）、同比（上周同时段）和自定义时间对比。当您都勾选后，图表会出现所选实例昨天同时段监控曲线和上周同时段监控曲线，方便您进行数据对比。
 ![](https://main.qcloudimg.com/raw/5e6179b23b57dda65ccbdb3d2d500edc.png)
