--- a/product/安全服务/云访问安全代理/购买指南/欠费说明.md
+++ b/product/安全服务/云访问安全代理/购买指南/欠费说明.md
@@ -11,7 +11,7 @@
 - **自动续费**：账户余额充足的情况下，若您已设置自动续费，资源在到期当日会执行自动续费。
 - **隔离期**：
  - 购买的功能到期后，如果未续费，将进入7天的隔离期，未到期的功能仍可以正常使用。
- - 所有功能都被隔离后，代理不再接受新建连接，存量的连接可以正常转发，但仅提供转发功能，加密、脱敏、审计等所有功能不生效。
+ - 所有功能都被隔离后，CASB 不再接受新建连接，存量的连接可以正常转发，但仅提供转发功能，加密、脱敏、审计等所有功能不生效。
  - 已到期功能的数据会在7天的隔离期内保留，若7天内完成续费，可以重新使用该功能。
 - **销毁数据**：
   - 所有功能隔离期满后会进行资源销毁，无法重新续费，相关的功能配置失效且无法找回，需重新购买功能并配置。
