--- a/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
+++ b/product/数据库/云存储Redis/操作指南/诊断优化/异常诊断.md
@@ -13,7 +13,7 @@
 在**概览**区域，默认展示 Redis 数据库实例近一小时健康得分的变化趋势图，以及数据库健康巡检诊断的风险等级。单击右上角的**历史**，可选择时间区间查看历史时间段的健康得分与巡检诊断结果。
 ![](https://qcloudimg.tencent-cloud.cn/raw/8ba7cb7d49c574a17ab937fe7c15082f.png)
 在**概览**区域下方，展示数据库当前时间的健康得分以及系统架构图。
-- 一方面展示数据库实例当前时间的健康得分，以及当前资源监控指标的统计数据，包括 CPU 使用率、内存使用率、连接使用率、出入流量使用率以及读请求命中率，帮您快速掌握数据库资源的使用情况。
+- 一方面展示数据库实例当前时间的健康得分，以及当前资源监控指标的统计数据，包括 CPU 使用率、内存使用率、连接使用率、出入流量使用率以及读请求命中率，帮您快速掌握数据库资源的使用情况。单击健康得分下面的**详情**，跳转至健康报告页签，可查看健康得分的详细信息。
 - 另一方面，展示数据库的系统分布架构图，您可以直观地看到数据库架构的 Proxy 节点、主节点、副本节点，并能直接查看到各个节点的告警以及异常事件的数量统计。并且，将鼠标放在架构图的节点上方，可查看该节点的关键指标的监控数据。监控指标，请参见 [性能趋势](https://cloud.tencent.com/document/product/239/73517)。
 ![](https://qcloudimg.tencent-cloud.cn/raw/d31b04a5ebd1efed1ea4cfe83341bebd.png)
 
@@ -22,7 +22,7 @@
 在**诊断提示**区域，展示近3小时数据库健康巡检的诊断数据，如下图所示。
 <img src="https://qcloudimg.tencent-cloud.cn/raw/08276f302a69bb851c5b31eff35f9ef9.png" style="zoom:60%;" />
 
-- **分险分布**：展示近3小时数据库健康巡检诊断的风险等级分布占比。
+- **分险分布**：展示近3小时数据库健康巡检诊断的风险等级分布占比，风险等级由重至轻，包括： 致命、 严重、 告警 、 提示。若所有风险等级占比为0%，即数据库状态为**健康**。
 - **诊断详情**：每隔10分钟统计的数据库风险等级详情。 将鼠标放在任意一条异常告警，可查看、忽略和取消忽略同类的告警。
 <table>
 <thead>
